--- a/src/GUI/Rando.fxml
+++ b/src/GUI/Rando.fxml
@@ -90,5 +90,10 @@
       <Button fx:id="button_inserer_image" layoutX="23.0" layoutY="555.0" mnemonicParsing="false" onAction="#insert_image" prefHeight="26.0" prefWidth="150.0" text="Insérer une image" />
       <Label fx:id="file_path" layoutX="22.0" layoutY="599.0" prefHeight="26.0" prefWidth="237.0" style="-fx-background-color: white; -fx-background-radius: 180; -fx-font-style: oblique;" text="chemin_image" />
       <ImageView fx:id="ImageViewer" fitHeight="141.0" fitWidth="174.0" layoutX="203.0" layoutY="516.0" pickOnBounds="true" preserveRatio="true" />
+      <Button layoutX="745.0" layoutY="617.0" mnemonicParsing="false" onAction="#imprim" prefHeight="26.0" prefWidth="87.0" text="Imprimer" textFill="#4ea651">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
